# 2025ENGINE

./: CMakeLists.txt  README.md
APP/: 2025ENGINE.cpp  CMakeLists.txt
ASSETS/GLTFMODEL/ANIMATED_TESTING/: AnimatedTesting.gltf  AnimatedTesting_baseColor.ktx2
ASSETS/GLTFMODEL/ANIMATED_TESTING_2/: AnimatedTesting2.gltf  AnimatedTesting2_baseColor.ktx2  cross.png.kra  untitled.blend
ASSETS/GLTFMODEL/ANIMATED_TESTING_3/: AnimatedTesting3.blend  AnimatedTesting3.gltf  AnimatedTesting3.png.kra  AnimatedTesting3_baseColor.ktx2
ASSETS/GLTFMODEL/AVOCADO/: Avocado_baseColor.ktx2
ASSETS/GLTFMODEL/CUBE/: cube_baseColor.ktx2  cube_baseColor.png.kra
ASSETS/GLTFMODEL/FISH/: BarramundiFish_baseColor.ktx2
ASSETS/GLTFMODEL/LIGHT/: light.gltf  light_baseColor.ktx2  light_baseColor.png.kra
ASSETS/GLTFMODEL/MIXED_MODEL/: mix.gltf
ASSETS/GLTFMODEL/MONKEY/: untitled.gltf
ASSETS/SHADER/CUBE_MAP/: cube_map_frag.glsl  cube_map_vert.glsl
ASSETS/SHADER/GLTF_MODEL/: frag.glsl  gltf_frag.glsl  gltf_vert.glsl  vert.glsl
ASSETS/SHADER/SHADOW_MAP/: depth_debug_frag.glsl  depth_debug_vert.glsl  depth_frag.glsl  depth_vert.glsl
ASSETS/TEXTURE/CUBEMAP/: skybox.ktx2
ASSETS/TEXTURE/CUBEMAP/TEMP_PNG/: help.txt
ASSETS/TEXTURE/KTX/: awesomeface2D.ktx2
DEPENDENCIES/GLAD/: CMakeLists.txt
DEPENDENCIES/GLYPHGL/: CMakeLists.txt  glyph.cpp  glyph.h  glyph_atlas.cpp  glyph_atlas.h  glyph_effect.cpp  glyph_effect.h  glyph_gl.cpp  glyph_gl.h  glyph_image.cpp  glyph_image.h  glyph_truetype.cpp  glyph_truetype.h
DEPENDENCIES/TRACY/: CMakeLists.txt
ENGINE/: CMakeLists.txt
ENGINE/CAMERA/: Camera.h  EditorCamera.h
ENGINE/DEBUGUI/: MicroUI.cpp  MicroUI.h  MicroUIRenderer.cpp  MicroUIRenderer.h
ENGINE/ECS/: ECSTest.cpp  ECSTest.h  ECSWorld.cpp  ECSWorld.h
ENGINE/ECS/COMPONENTS/: AnimationComponent.cpp  AnimationComponent.h  LightingComponent.cpp  LightingComponent.h  MeshComponent.cpp  MeshComponent.h  TransfromComponent.cpp  TransfromComponent.h
ENGINE/ECS/SYSTEMS/: DebugMenuUISystem.cpp  DebugMenuUISystem.h  MeshRendererSystem.cpp  MeshRendererSystem.h
ENGINE/GlobalInformation/: GlobalInformation.cpp  GlobalInformation.h
ENGINE/INPUT/: Button.h  KeyBoard.cpp  KeyBoard.h  Keys.cpp  Keys.h  Mouse.cpp  Mouse.h  MouseButtons.cpp  MouseButtons.h
ENGINE/PROFILING/: Profiler.h
ENGINE/RENDERER/FRAME_BUFFER/: DepthMap.cpp  DepthMap.h
ENGINE/RENDERER/MESH/GLTFMESH/: GLTFMESHLoader.cpp  GLTFMESHLoader.h  GLTFMESHRenderer.cpp  GLTFMESHRenderer.h  GLTFMESHSkeletalAnimationLoader.cpp  GLTFMESHSkeletalAnimationLoader.h
ENGINE/RENDERER/SHADERS/: Shader.cpp  Shader.h
ENGINE/RENDERER/TEXT/: TextRenderer.cpp  TextRenderer.h
ENGINE/RENDERER/TEXTURE_KTX/: TextureKTX2.cpp  TextureKTX2.h  TextureLoader.cpp  TextureLoader.h
ENGINE/SCRIPTING/NativeCPP/: NativeCPPGlobalScript.h  NativeCPPScriptManager.cpp  NativeCPPScriptManager.h
ENGINE/UTILITIES/: Time.h
ENGINE/WINDOW/: Window.cpp  Window.h
RENDERDOC/: SpotLight.csv
SCRIPT/: CMakeLists.txt  ScriptImplementation.cpp
